# tetons

./: .gitignore  CMakeLists.txt  README.md
src/: image.cpp  image.hpp  load.cpp  load.hpp  main.cpp  pixel.cpp  pixel.hpp  process.cpp  process.hpp
